fixed text overflow in body and title

--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,9 @@ html {
   width:20%;
   padding-bottom: 0;
 }
+#logo > img{
+  max-width: 100%;
+}
 #title{
   width:60%;
   text-align: center;
@@ -73,7 +76,7 @@ a.navlink:hover {
 #navbar {
   padding: 0;
   width: 100%;
-  height: 6.5vw;
+  height: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,16 +139,16 @@ a.footerlink:hover {
 #textcontain  {
 width:75%;
 margin: 0 auto;
-padding-left: 2%;
-padding-top:2% ;
+padding: 2% 0 2% 10%;
 font-size: 1em;
 font-weight: bold;
+
 }
 
 #textcontain > ul{
   list-style-type: circle;
   list-style-position: inside;
-  padding: 0;
+  padding: 0 5% 50%;
 }
 
 #textcontain li {
@@ -374,6 +377,7 @@ ul.bxslider {
     padding-top:2% ;
     font-size: 1em;
     font-weight: bold;
+    padding-bottom: 15%;
     }
     
     #textcontain > ul{
@@ -399,6 +403,9 @@ ul.bxslider {
       border: 0;
       float: right;
      }
+     #navbar {
+      height: 6.5vw;
+      }
 }
 
 @media only screen and (min-width: 950px){
